--- a/backend/SalesMS/src/main/resources/application.yaml
+++ b/backend/SalesMS/src/main/resources/application.yaml
@@ -3,6 +3,8 @@ spring:
     active: local
 ---
 spring:
+  allowed:
+    origin: http://localhost:8080
   datasource:
     url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     platform: h2
@@ -32,3 +34,6 @@ spring:
   config:
     activate:
       on-profile: local
+logging:
+  level:
+    root: DEBUG
