ALELUIA SENHOR, O CORS BOMBOU

--- a/backend/Gateway/src/main/resources/application.yaml
+++ b/backend/Gateway/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
           '[/**]':
             allowedOrigins: "*"
             allowedMethods: "*"
-            allowedHeaders: "Authorization"
+            allowedHeaders: "Content-Type"
 logging:
   level:
     root: DEBUG
