--- a/backend/StockMS/src/main/resources/application.yaml
+++ b/backend/StockMS/src/main/resources/application.yaml
@@ -34,6 +34,6 @@ spring:
   config:
     activate:
       on-profile: local
-logging:
-  level:
-    root: DEBUG
+#logging:
+#  level:
+#    root: DEBUG
